portfolio adjustments for mobile, incomplete. Issues with alignment of icons, border around third section

--- a/css/main.css
+++ b/css/main.css
@@ -319,39 +319,164 @@ table {
   color: #a5a5a5;
 }
 
+.portfolio__background {
+  width: 100%;
+  height: 1350px;
+  background-color: #f7f7f7;
+}
+
 .portfolio {
   display: flex;
   flex-direction: column;
+  background-color: #f7f7f7;
 }
 .portfolio__tile {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 30px;
+  border: 1px solid #e8e9ed;
+  border-radius: 5px;
+  background-color: #ffffff;
 }
 @media (max-width: 800px) {
   .portfolio__tile {
     flex-direction: column-reverse;
+    align-items: center;
+    justify-content: center;
+    max-width: 416px;
   }
 }
 .portfolio__tile__text {
   max-width: 416px;
+  padding: 0 100px;
+}
+@media (max-width: 800px) {
+  .portfolio__tile__text {
+    max-width: 272px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 27px 21px 10px;
+  }
+}
+@media (max-width: 800px) and (max-width: 800px) {
+  .portfolio__tile__text {
+    padding-left: 0px;
+  }
 }
 .portfolio__tile__text__h3 {
   font-family: "Raleway", sans-serif;
   font-size: 2.25rem;
+  margin-bottom: 30px;
+}
+@media (max-width: 800px) {
+  .portfolio__tile__text__h3 {
+    text-align: left;
+  }
 }
 .portfolio__tile__text__paragraph {
   font-family: "Open Sans", sans-serif;
-  text-align: left;
   padding: 10px 0;
 }
 .portfolio__tile__picture1, .portfolio__tile__picture2, .portfolio__tile__picture3 {
+  margin: 38px 0;
+  margin-right: 71px;
+}
+@media (max-width: 800px) {
+  .portfolio__tile__picture1, .portfolio__tile__picture2, .portfolio__tile__picture3 {
+    margin: 0 auto;
+  }
+}
+.portfolio__tile__picture1 {
   width: 180px;
   height: 180px;
-  background-color: #ff22ff;
+  border-radius: 21px;
+  background-color: #fb3b64;
+  transform: rotate(45deg);
 }
+@media (max-width: 800px) {
+  .portfolio__tile__picture1 {
+    width: 90px;
+    height: 90px;
+    margin: 30px;
+  }
+}
+.portfolio__tile__picture2 {
+  width: 320px;
+  height: 320px;
+  border-radius: 320px;
+  background-color: #08a6e4;
+}
+@media (max-width: 800px) {
+  .portfolio__tile__picture2 {
+    width: 131px;
+    height: 131px;
+    margin: 12px;
+  }
+}
+.portfolio__tile__picture3 {
+  width: 440px;
+  height: 370px;
+  border-radius: 5px;
+  background-color: #55dfb4;
+}
+@media (max-width: 800px) {
+  .portfolio__tile__picture3 {
+    width: 314px;
+    height: 195px;
+  }
+}
+.portfolio__tile .underscore1,
+.portfolio__tile .underscore2,
+.portfolio__tile .underscore3 {
+  width: 327px;
+  border-bottom: 4px solid #fb3b64;
+  margin-top: 50px;
+}
+@media (max-width: 800px) {
+  .portfolio__tile .underscore1,
+.portfolio__tile .underscore2,
+.portfolio__tile .underscore3 {
+    display: none;
+  }
+}
+.portfolio__tile .underscore2 {
+  border-color: #08a6e4;
+}
+.portfolio__tile .underscore3 {
+  border-color: #55dfb4;
+}
+.separator {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #f7f7f7;
+  border: 0px none transparent;
+}
+@media (max-width: 800px) {
+  .separator {
+    flex-direction: column;
+  }
+}
+
+.separator > .portfolio__tile__text {
+  align-items: center;
+  justify-content: center;
+  height: 370px;
+  margin-right: 60px;
+  border: 1px solid #e8e9ed;
+  background-color: #ffffff;
+}
+.separator .portfolio__tile__text__h3 {
+  margin-top: 70px;
+}
+
+.separator > .portfolio__tile__picture3 {
+  border: 1px solid #e8e9ed;
+}
+
 .container {
   max-width: 1352px;
   margin: 0 auto;
